<resources>
    <string name="app_name">personal_delivery</string>
    <string name="informativo_redefinicao_senha">Informe seu email abaixo e receba um link de redefinição de senha:</string>
    <string name="ratificar_verificacao_email">É necessário verificar o email enviado para acessar sua conta</string>
    <string name="input_email">Insira seu email aqui </string>
    <string name="bt_redefine_senha">Redefinir Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Personal Trainer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_lista_professores">Lista de Professores</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="texto_entrada_activity">Encontre um personal trainer mais próximo de você</string>
    <string name="bt_login_entrada">Já tenho conta</string>
    <string name="bt_registrar_entrada">Registrar-me</string>
    <string name="texto_link_politicas_entrada">Nossas políticas de uso</string>
    <string name="bt_logar_login">Entrar</string>
    <string name="logo_app">logo do app</string>
    <string name="input_hint_senha">Senha</string>
    <string name="item_label_nome">Nome</string>
    <string name="item_texto_nome">Nome do professor</string>
    <string name="item_label_experiencia">Experiência</string>
    <string name="item_texto_experiencia">Experiência do professor</string>
    <string name="bt_cria_conta">Criar Conta</string>
    <string name="input_hint_confirma_senah">Confirmar senha</string>
    <string name="texto_link_redefinir_senha">Esqueceu sua senha?</string>
    <string name="bt_loga_com_google">Conta Google</string>
</resources>
