<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RedefineSenhaActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/informativo_redefinicao_senha"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_email_redefine_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <Button
        android:id="@+id/bt_redefine_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/formato_campo"
        android:text="@string/bt_redefine_senha"
        app:layout_constraintEnd_toEndOf="@+id/input_email_redefine_senha"
        app:layout_constraintStart_toStartOf="@+id/input_email_redefine_senha"
        app:layout_constraintTop_toBottomOf="@+id/input_email_redefine_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>